--- a/workshopping_code.ipynb
+++ b/workshopping_code.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5bb201fe",
+   "id": "b9d863de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,10 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b4394b00",
-   "metadata": {},
+   "id": "e8e426b4",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -35,8 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1e73fe63",
+   "execution_count": 17,
+   "id": "04dd80f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "403289a8",
    "metadata": {},
    "outputs": [
     {
@@ -44,23 +57,261 @@
      "output_type": "stream",
      "text": [
       "Status Code: 200\n",
-      "Response Body: {'name': 'Midseasonform', 'status': 'in_season', 'metadata': {'auto_continue': 'on', 'keeper_deadline': '0', 'latest_league_winner_roster_id': '2'}, 'settings': {'best_ball': 0, 'waiver_budget': 100, 'disable_adds': 0, 'capacity_override': 0, 'waiver_bid_min': 0, 'taxi_deadline': 4, 'draft_rounds': 4, 'reserve_allow_na': 0, 'start_week': 1, 'playoff_seed_type': 0, 'playoff_teams': 6, 'veto_votes_needed': 5, 'num_teams': 10, 'daily_waivers_hour': 0, 'playoff_type': 0, 'taxi_slots': 4, 'sub_start_time_eligibility': 1, 'daily_waivers_days': 5461, 'sub_lock_if_starter_active': 0, 'playoff_week_start': 15, 'waiver_clear_days': 2, 'reserve_allow_doubtful': 0, 'commissioner_direct_invite': 0, 'veto_auto_poll': 1, 'reserve_allow_dnr': 0, 'taxi_allow_vets': 0, 'waiver_day_of_week': 0, 'playoff_round_type': 0, 'reserve_allow_out': 0, 'reserve_allow_sus': 0, 'veto_show_votes': 0, 'trade_deadline': 11, 'taxi_years': 1, 'daily_waivers': 1, 'faab_suggestions': 0, 'disable_trades': 0, 'pick_trading': 1, 'type': 2, 'max_keepers': 1, 'waiver_type': 2, 'max_subs': 1, 'league_average_match': 0, 'trade_review_days': 1, 'bench_lock': 0, 'offseason_adds': 1, 'leg': 1, 'reserve_slots': 3, 'reserve_allow_cov': 0, 'daily_waivers_last_ran': 20}, 'avatar': None, 'company_id': None, 'shard': 927, 'season': '2025', 'season_type': 'regular', 'sport': 'nfl', 'scoring_settings': {'sack': 1.0, 'qb_hit': 0.0, 'fgm_40_49': 4.0, 'bonus_rec_te': 0.0, 'fgm_yds': 0.0, 'def_forced_punts': 0.0, 'bonus_rec_yd_100': 0.0, 'bonus_rush_yd_100': 0.0, 'pass_int': -2.0, 'fgmiss_50p': 0.0, 'pts_allow_0': 5.0, 'bonus_pass_yd_400': 0.0, 'pass_2pt': 2.0, 'rec_0_4': 0.0, 'yds_allow_450_499': -5.0, 'blk_kick_ret_yd': 0.0, 'st_td': 6.0, 'def_pr_yd': 0.0, 'rec_30_39': 0.0, 'sack_yd': 0.0, 'fgm_yds_over_30': 0.0, 'rec_td': 6.0, 'yds_allow_400_449': -3.0, 'tkl_ast': 0.0, 'rec_20_29': 0.0, 'fgm_30_39': 3.0, 'xpmiss': -1.0, 'rush_td_50p': 0.0, 'rush_td': 6.0, 'def_kr_yd': 0.0, 'bonus_fd_wr': 0.0, 'pts_allow': 0.0, 'def_4_and_stop': 0.0, 'fg_ret_yd': 0.0, 'yds_allow_550p': -7.0, 'pass_td_40p': 0.0, 'def_st_tkl_solo': 0.0, 'yds_allow_350_399': -1.0, 'fgm': 0.0, 'idp_sack_yd': 0.0, 'bonus_rush_rec_yd_100': 0.0, 'rec_2pt': 2.0, 'bonus_pass_cmp_25': 0.0, 'rush_fd': 0.0, 'pass_int_td': 0.0, 'int_ret_yd': 0.0, 'pass_att': 0.0, 'st_fum_rec': 1.0, 'fgmiss': -1.0, 'bonus_def_fum_td_50p': 0.0, 'ff': 1.0, 'bonus_sack_2p': 0.0, 'fgmiss_30_39': 0.0, 'rec': 1.0, 'yds_allow_200_299': 2.0, 'pts_allow_14_20': 1.0, 'def_2pt': 0.0, 'fgm_0_19': 3.0, 'idp_pass_def_3p': 0.0, 'int': 2.0, 'def_st_fum_rec': 1.0, 'fum_lost': -2.0, 'pts_allow_1_6': 4.0, 'rec_fd': 0.0, 'kr_yd': 0.0, 'fgmiss_20_29': 0.0, 'rush_att': 0.0, 'st_tkl_solo': 0.0, 'yds_allow': 0.0, 'rec_5_9': 0.0, 'fgm_20_29': 3.0, 'yds_allow_500_549': -6.0, 'pts_allow_21_27': 0.0, 'bonus_rec_wr': 0.0, 'bonus_pass_yd_300': 0.0, 'xpm': 1.0, 'pass_td_50p': 0.0, 'pass_sack': 0.0, 'rec_40p': 0.0, 'def_3_and_out': 0.0, 'fgmiss_0_19': 0.0, 'pass_cmp': 0.0, 'tkl_loss': 0.0, 'rush_2pt': 2.0, 'def_pass_def': 0.0, 'yds_allow_300_349': 0.0, 'fum_rec': 2.0, 'rec_10_19': 0.0, 'bonus_rec_yd_200': 0.0, 'def_st_td': 6.0, 'tkl': 0.0, 'pass_cmp_40p': 0.0, 'fgm_50p': 5.0, 'bonus_tkl_10p': 0.0, 'def_td': 6.0, 'pass_fd': 0.0, 'rec_td_40p': 0.0, 'bonus_rush_yd_200': 0.0, 'safe': 2.0, 'pass_yd': 0.04, 'fgmiss_40_49': 0.0, 'rec_td_50p': 0.0, 'blk_kick': 2.0, 'pass_td': 4.0, 'tkl_solo': 0.0, 'bonus_rush_att_20': 0.0, 'yds_allow_100_199': 3.0, 'bonus_def_int_td_50p': 0.0, 'bonus_fd_qb': 0.0, 'rush_yd': 0.1, 'yds_allow_0_100': 5.0, 'bonus_rec_rb': 0.0, 'rush_40p': 0.0, 'pr_yd': 0.0, 'fum': 0.0, 'pts_allow_28_34': -1.0, 'pts_allow_35p': -4.0, 'bonus_rush_rec_yd_200': 0.0, 'fum_rec_td': 6.0, 'rec_yd': 0.1, 'rush_td_40p': 0.0, 'bonus_fd_te': 0.0, 'bonus_fd_rb': 0.0, 'fum_ret_yd': 0.0, 'def_st_ff': 1.0, 'pass_inc': 0.0, 'pts_allow_7_13': 3.0, 'st_ff': 1.0}, 'last_message_id': '1239640542887813120', 'last_author_avatar': 'eb19c654a2425f2862251b5511c2e816', 'last_author_display_name': 'Coleeb012', 'last_author_id': '1125144445898387456', 'last_author_is_bot': False, 'last_message_attachment': None, 'last_message_text_map': None, 'last_message_time': 1749915846134, 'last_pinned_message_id': '1239082345110196224', 'draft_id': '1224143313427255296', 'last_read_id': None, 'league_id': '1180280584113598464', 'previous_league_id': '1115499969697456128', 'roster_positions': ['QB', 'RB', 'RB', 'WR', 'WR', 'TE', 'FLEX', 'FLEX', 'FLEX', 'SUPER_FLEX', 'BN', 'BN', 'BN', 'BN', 'BN', 'BN', 'BN', 'BN', 'BN', 'BN', 'BN', 'BN'], 'bracket_id': None, 'bracket_overrides_id': None, 'group_id': None, 'loser_bracket_id': None, 'loser_bracket_overrides_id': None, 'total_rosters': 10}\n"
+      "{\n",
+      "    \"name\": \"Midseasonform\",\n",
+      "    \"status\": \"in_season\",\n",
+      "    \"metadata\": {\n",
+      "        \"auto_continue\": \"on\",\n",
+      "        \"keeper_deadline\": \"0\",\n",
+      "        \"latest_league_winner_roster_id\": \"2\"\n",
+      "    },\n",
+      "    \"settings\": {\n",
+      "        \"best_ball\": 0,\n",
+      "        \"waiver_budget\": 100,\n",
+      "        \"disable_adds\": 0,\n",
+      "        \"capacity_override\": 0,\n",
+      "        \"waiver_bid_min\": 0,\n",
+      "        \"taxi_deadline\": 4,\n",
+      "        \"draft_rounds\": 4,\n",
+      "        \"reserve_allow_na\": 0,\n",
+      "        \"start_week\": 1,\n",
+      "        \"playoff_seed_type\": 0,\n",
+      "        \"playoff_teams\": 6,\n",
+      "        \"veto_votes_needed\": 5,\n",
+      "        \"num_teams\": 10,\n",
+      "        \"daily_waivers_hour\": 0,\n",
+      "        \"playoff_type\": 0,\n",
+      "        \"taxi_slots\": 4,\n",
+      "        \"sub_start_time_eligibility\": 1,\n",
+      "        \"daily_waivers_days\": 5461,\n",
+      "        \"sub_lock_if_starter_active\": 0,\n",
+      "        \"playoff_week_start\": 15,\n",
+      "        \"waiver_clear_days\": 2,\n",
+      "        \"reserve_allow_doubtful\": 0,\n",
+      "        \"commissioner_direct_invite\": 0,\n",
+      "        \"veto_auto_poll\": 1,\n",
+      "        \"reserve_allow_dnr\": 0,\n",
+      "        \"taxi_allow_vets\": 0,\n",
+      "        \"waiver_day_of_week\": 0,\n",
+      "        \"playoff_round_type\": 0,\n",
+      "        \"reserve_allow_out\": 0,\n",
+      "        \"reserve_allow_sus\": 0,\n",
+      "        \"veto_show_votes\": 0,\n",
+      "        \"trade_deadline\": 11,\n",
+      "        \"taxi_years\": 1,\n",
+      "        \"daily_waivers\": 1,\n",
+      "        \"faab_suggestions\": 0,\n",
+      "        \"disable_trades\": 0,\n",
+      "        \"pick_trading\": 1,\n",
+      "        \"type\": 2,\n",
+      "        \"max_keepers\": 1,\n",
+      "        \"waiver_type\": 2,\n",
+      "        \"max_subs\": 1,\n",
+      "        \"league_average_match\": 0,\n",
+      "        \"trade_review_days\": 1,\n",
+      "        \"bench_lock\": 0,\n",
+      "        \"offseason_adds\": 1,\n",
+      "        \"leg\": 1,\n",
+      "        \"reserve_slots\": 3,\n",
+      "        \"reserve_allow_cov\": 0,\n",
+      "        \"daily_waivers_last_ran\": 20\n",
+      "    },\n",
+      "    \"avatar\": null,\n",
+      "    \"company_id\": null,\n",
+      "    \"sport\": \"nfl\",\n",
+      "    \"season_type\": \"regular\",\n",
+      "    \"season\": \"2025\",\n",
+      "    \"shard\": 927,\n",
+      "    \"last_message_id\": \"1239640542887813120\",\n",
+      "    \"scoring_settings\": {\n",
+      "        \"sack\": 1.0,\n",
+      "        \"qb_hit\": 0.0,\n",
+      "        \"fgm_40_49\": 4.0,\n",
+      "        \"bonus_rec_te\": 0.0,\n",
+      "        \"fgm_yds\": 0.0,\n",
+      "        \"def_forced_punts\": 0.0,\n",
+      "        \"bonus_rec_yd_100\": 0.0,\n",
+      "        \"bonus_rush_yd_100\": 0.0,\n",
+      "        \"pass_int\": -2.0,\n",
+      "        \"fgmiss_50p\": 0.0,\n",
+      "        \"pts_allow_0\": 5.0,\n",
+      "        \"bonus_pass_yd_400\": 0.0,\n",
+      "        \"pass_2pt\": 2.0,\n",
+      "        \"rec_0_4\": 0.0,\n",
+      "        \"yds_allow_450_499\": -5.0,\n",
+      "        \"blk_kick_ret_yd\": 0.0,\n",
+      "        \"st_td\": 6.0,\n",
+      "        \"def_pr_yd\": 0.0,\n",
+      "        \"rec_30_39\": 0.0,\n",
+      "        \"sack_yd\": 0.0,\n",
+      "        \"fgm_yds_over_30\": 0.0,\n",
+      "        \"rec_td\": 6.0,\n",
+      "        \"yds_allow_400_449\": -3.0,\n",
+      "        \"tkl_ast\": 0.0,\n",
+      "        \"rec_20_29\": 0.0,\n",
+      "        \"fgm_30_39\": 3.0,\n",
+      "        \"xpmiss\": -1.0,\n",
+      "        \"rush_td_50p\": 0.0,\n",
+      "        \"rush_td\": 6.0,\n",
+      "        \"def_kr_yd\": 0.0,\n",
+      "        \"bonus_fd_wr\": 0.0,\n",
+      "        \"pts_allow\": 0.0,\n",
+      "        \"def_4_and_stop\": 0.0,\n",
+      "        \"fg_ret_yd\": 0.0,\n",
+      "        \"yds_allow_550p\": -7.0,\n",
+      "        \"pass_td_40p\": 0.0,\n",
+      "        \"def_st_tkl_solo\": 0.0,\n",
+      "        \"yds_allow_350_399\": -1.0,\n",
+      "        \"fgm\": 0.0,\n",
+      "        \"idp_sack_yd\": 0.0,\n",
+      "        \"bonus_rush_rec_yd_100\": 0.0,\n",
+      "        \"rec_2pt\": 2.0,\n",
+      "        \"bonus_pass_cmp_25\": 0.0,\n",
+      "        \"rush_fd\": 0.0,\n",
+      "        \"pass_int_td\": 0.0,\n",
+      "        \"int_ret_yd\": 0.0,\n",
+      "        \"pass_att\": 0.0,\n",
+      "        \"st_fum_rec\": 1.0,\n",
+      "        \"fgmiss\": -1.0,\n",
+      "        \"bonus_def_fum_td_50p\": 0.0,\n",
+      "        \"ff\": 1.0,\n",
+      "        \"bonus_sack_2p\": 0.0,\n",
+      "        \"fgmiss_30_39\": 0.0,\n",
+      "        \"rec\": 1.0,\n",
+      "        \"yds_allow_200_299\": 2.0,\n",
+      "        \"pts_allow_14_20\": 1.0,\n",
+      "        \"def_2pt\": 0.0,\n",
+      "        \"fgm_0_19\": 3.0,\n",
+      "        \"idp_pass_def_3p\": 0.0,\n",
+      "        \"int\": 2.0,\n",
+      "        \"def_st_fum_rec\": 1.0,\n",
+      "        \"fum_lost\": -2.0,\n",
+      "        \"pts_allow_1_6\": 4.0,\n",
+      "        \"rec_fd\": 0.0,\n",
+      "        \"kr_yd\": 0.0,\n",
+      "        \"fgmiss_20_29\": 0.0,\n",
+      "        \"rush_att\": 0.0,\n",
+      "        \"st_tkl_solo\": 0.0,\n",
+      "        \"yds_allow\": 0.0,\n",
+      "        \"rec_5_9\": 0.0,\n",
+      "        \"fgm_20_29\": 3.0,\n",
+      "        \"yds_allow_500_549\": -6.0,\n",
+      "        \"pts_allow_21_27\": 0.0,\n",
+      "        \"bonus_rec_wr\": 0.0,\n",
+      "        \"bonus_pass_yd_300\": 0.0,\n",
+      "        \"xpm\": 1.0,\n",
+      "        \"pass_td_50p\": 0.0,\n",
+      "        \"pass_sack\": 0.0,\n",
+      "        \"rec_40p\": 0.0,\n",
+      "        \"def_3_and_out\": 0.0,\n",
+      "        \"fgmiss_0_19\": 0.0,\n",
+      "        \"pass_cmp\": 0.0,\n",
+      "        \"tkl_loss\": 0.0,\n",
+      "        \"rush_2pt\": 2.0,\n",
+      "        \"def_pass_def\": 0.0,\n",
+      "        \"yds_allow_300_349\": 0.0,\n",
+      "        \"fum_rec\": 2.0,\n",
+      "        \"rec_10_19\": 0.0,\n",
+      "        \"bonus_rec_yd_200\": 0.0,\n",
+      "        \"def_st_td\": 6.0,\n",
+      "        \"tkl\": 0.0,\n",
+      "        \"pass_cmp_40p\": 0.0,\n",
+      "        \"fgm_50p\": 5.0,\n",
+      "        \"bonus_tkl_10p\": 0.0,\n",
+      "        \"def_td\": 6.0,\n",
+      "        \"pass_fd\": 0.0,\n",
+      "        \"rec_td_40p\": 0.0,\n",
+      "        \"bonus_rush_yd_200\": 0.0,\n",
+      "        \"safe\": 2.0,\n",
+      "        \"pass_yd\": 0.04,\n",
+      "        \"fgmiss_40_49\": 0.0,\n",
+      "        \"rec_td_50p\": 0.0,\n",
+      "        \"blk_kick\": 2.0,\n",
+      "        \"pass_td\": 4.0,\n",
+      "        \"tkl_solo\": 0.0,\n",
+      "        \"bonus_rush_att_20\": 0.0,\n",
+      "        \"yds_allow_100_199\": 3.0,\n",
+      "        \"bonus_def_int_td_50p\": 0.0,\n",
+      "        \"bonus_fd_qb\": 0.0,\n",
+      "        \"rush_yd\": 0.1,\n",
+      "        \"yds_allow_0_100\": 5.0,\n",
+      "        \"bonus_rec_rb\": 0.0,\n",
+      "        \"rush_40p\": 0.0,\n",
+      "        \"pr_yd\": 0.0,\n",
+      "        \"fum\": 0.0,\n",
+      "        \"pts_allow_28_34\": -1.0,\n",
+      "        \"pts_allow_35p\": -4.0,\n",
+      "        \"bonus_rush_rec_yd_200\": 0.0,\n",
+      "        \"fum_rec_td\": 6.0,\n",
+      "        \"rec_yd\": 0.1,\n",
+      "        \"rush_td_40p\": 0.0,\n",
+      "        \"bonus_fd_te\": 0.0,\n",
+      "        \"bonus_fd_rb\": 0.0,\n",
+      "        \"fum_ret_yd\": 0.0,\n",
+      "        \"def_st_ff\": 1.0,\n",
+      "        \"pass_inc\": 0.0,\n",
+      "        \"pts_allow_7_13\": 3.0,\n",
+      "        \"st_ff\": 1.0\n",
+      "    },\n",
+      "    \"draft_id\": \"1224143313427255296\",\n",
+      "    \"last_author_avatar\": \"eb19c654a2425f2862251b5511c2e816\",\n",
+      "    \"last_author_display_name\": \"Coleeb012\",\n",
+      "    \"last_author_id\": \"1125144445898387456\",\n",
+      "    \"last_author_is_bot\": false,\n",
+      "    \"last_message_attachment\": null,\n",
+      "    \"last_message_text_map\": null,\n",
+      "    \"last_message_time\": 1749915846134,\n",
+      "    \"last_pinned_message_id\": \"1239082345110196224\",\n",
+      "    \"league_id\": \"1180280584113598464\",\n",
+      "    \"previous_league_id\": \"1115499969697456128\",\n",
+      "    \"last_read_id\": null,\n",
+      "    \"roster_positions\": [\n",
+      "        \"QB\",\n",
+      "        \"RB\",\n",
+      "        \"RB\",\n",
+      "        \"WR\",\n",
+      "        \"WR\",\n",
+      "        \"TE\",\n",
+      "        \"FLEX\",\n",
+      "        \"FLEX\",\n",
+      "        \"FLEX\",\n",
+      "        \"SUPER_FLEX\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\",\n",
+      "        \"BN\"\n",
+      "    ],\n",
+      "    \"group_id\": null,\n",
+      "    \"bracket_id\": null,\n",
+      "    \"bracket_overrides_id\": null,\n",
+      "    \"loser_bracket_id\": null,\n",
+      "    \"loser_bracket_overrides_id\": null,\n",
+      "    \"total_rosters\": 10\n",
+      "}\n"
      ]
     }
    ],
    "source": [
     "# Example GET request\n",
-    "import requests\n",
+    "\n",
     "\n",
     "response = requests.get('https://api.sleeper.app/v1/league/1180280584113598464')\n",
     "print(f\"Status Code: {response.status_code}\")\n",
-    "print(f\"Response Body: {response.json()}\")\n"
+    "print(json.dumps(response.json(), indent = 4))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3dfc140",
+   "id": "db675a82",
    "metadata": {},
    "outputs": [],
    "source": []
